--- a/src/main/resources/assets/twitchchat/lang/en_gb.json
+++ b/src/main/resources/assets/twitchchat/lang/en_gb.json
@@ -1,25 +1,22 @@
 {
-  "config.twitchchat.title": "Twitch Chat Bridge",
-  "config.twitchchat.category.credentials": "Credentials",
-  "config.twitchchat.credentials.channel": "Twitch channel",
-  "config.twitchchat.credentials.username": "Username",
-  "config.twitchchat.credentials.username.tooltip": "Your Twitch username",
-  "config.twitchchat.credentials.oauthKey": "OAuth Token",
-  "config.twitchchat.credentials.oauthKey.tooltip": "Your Twitch OAuth token",
-  "config.twitchchat.category.cosmetics": "Cosmetics",
-  "config.twitchchat.cosmetics.prefix": "Prefix",
-  "config.twitchchat.cosmetics.prefix.tooltip": "Put this at the start of your messages to send them to a Twitch channel",
-  "config.twitchchat.cosmetics.dateFormat": "Timestamp format",
-  "config.twitchchat.cosmetics.dateFormat.tooltip": "Customise the timestamp format messages are going to follow",
-  "config.twitchchat.cosmetics.ignorelist": "Ignore list",
-  "config.twitchchat.cosmetics.ignorelist.tooltip": "Messages from users in this list won't be displayed",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions": "Suggestions for /twitch watch",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions.tooltip": "Autocomplete /twitch watch channel names with names from users in your server",
-  "config.twitchchat.category.broadcast": "Broadcasting",
-  "config.twitchchat.broadcast.toggle": "Broadcast Twitch messages",
-  "config.twitchchat.broadcast.toggle.tooltip": "Sends Twitch chat messages to the server chat",
-  "config.twitchchat.broadcast.prefix": "Broadcast message prefix",
-  "config.twitchchat.broadcast.prefix.tooltip": "This is going to be added to the beginning of messages broadcasted to the server",
+  "text.config.twitchchatbridge/config.title": "Twitch Chat Bridge",
+  "text.config.twitchchatbridge/config.option.channel": "Twitch channel",
+  "text.config.twitchchatbridge/config.option.broadcast": "Broadcast Twitch messages",
+  "text.config.twitchchatbridge/config.option.broadcast.tooltip": "Sends Twitch chat messages to the server chat",
+  "text.config.twitchchatbridge/config.section.cosmetics": "Cosmetics",
+  "text.config.twitchchatbridge/config.option.prefix": "Broadcast message prefix",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "This is going to be added to the beginning of messages broadcasted to the server",
+  "text.config.twitchchatbridge/config.option.dateFormat": "Timestamp format",
+  "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "Customise the timestamp format messages are going to follow",
+  "text.config.twitchchatbridge/config.option.ignoreList": "Ignore list",
+  "text.config.twitchchatbridge/config.option.ignoreList.tooltip": "Messages from users in this list won't be displayed",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions": "Suggestions for /twitch watch",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions.tooltip": "Autocomplete /twitch watch channel names with names from users in your server",
+  "text.config.twitchchatbridge/config.section.credentials": "Credentials",
+  "text.config.twitchchatbridge/config.category.credentials": "OAuth Token",
+  "text.config.twitchchatbridge/config.category.credentials.tooltip": "Your Twitch OAuth token",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey": "OAuth Token",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey.tooltip": "Your Twitch OAuth token",
 
   "text.twitchchat.command.base.noargs1": "Welcome to the Minecraft-Twitch Bridge mod!",
   "text.twitchchat.command.base.noargs2": "To enable it just do /twitch enable when you're done setting up the config.",
