--- a/src/main/resources/assets/twitchchat/lang/fr_fr.json
+++ b/src/main/resources/assets/twitchchat/lang/fr_fr.json
@@ -1,25 +1,22 @@
 {
-  "config.twitchchat.title": "Twitch Chat Bridge",
-  "config.twitchchat.category.credentials": "Identifiants",
-  "config.twitchchat.credentials.channel": "Chaîne Twitch",
-  "config.twitchchat.credentials.username": "Nom d'utilisateur",
-  "config.twitchchat.credentials.username.tooltip": "Votre nom d'utilisateur Twitch",
-  "config.twitchchat.credentials.oauthKey": "Token d'OAuth",
-  "config.twitchchat.credentials.oauthKey.tooltip": "Votre token d'OAuth Twitch",
-  "config.twitchchat.category.cosmetics": "Cosmétiques",
-  "config.twitchchat.cosmetics.prefix": "Préfixe",
-  "config.twitchchat.cosmetics.prefix.tooltip": "Mettez cela au début de vos messages pour les envoyer à une chaîne Twitch",
-  "config.twitchchat.cosmetics.dateFormat": "Format de l'horodatage",
-  "config.twitchchat.cosmetics.dateFormat.tooltip": "Modifier le format de l'horodatage que les messages vont suivre",
-  "config.twitchchat.cosmetics.ignorelist": "Liste d'ignoré(e)s",
-  "config.twitchchat.cosmetics.ignorelist.tooltip": "Les messages des utilisateurs de cette liste ne seront pas affichés",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions": "Suggestions pour /twitch watch",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions.tooltip": "Autocompléter /twitch watch channel names avec les noms des utilisateurs de votre serveur",
-  "config.twitchchat.category.broadcast": "Diffusion",
-  "config.twitchchat.broadcast.toggle": "Diffuser les messages Twitch",
-  "config.twitchchat.broadcast.toggle.tooltip": "Envoie les messages du tchat Twitch sur le tchat du serveur",
-  "config.twitchchat.broadcast.prefix": "Préfixe de message de diffusion",
-  "config.twitchchat.broadcast.prefix.tooltip": "Cela sera ajouté au début des messages diffusés au serveur",
+  "text.config.twitchchatbridge/config.title": "Twitch Chat Bridge",
+  "text.config.twitchchatbridge/config.option.channel": "Chaîne Twitch",
+  "text.config.twitchchatbridge/config.option.broadcast": "Diffuser les messages Twitch",
+  "text.config.twitchchatbridge/config.option.broadcast.tooltip": "Envoie les messages du tchat Twitch sur le tchat du serveur",
+  "text.config.twitchchatbridge/config.section.cosmetics": "Cosmétiques",
+  "text.config.twitchchatbridge/config.option.prefix": "Préfixe de message de diffusion",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "Cela sera ajouté au début des messages diffusés au serveur",
+  "text.config.twitchchatbridge/config.option.dateFormat": "Format de l'horodatage",
+  "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "Modifier le format de l'horodatage que les messages vont suivre",
+  "text.config.twitchchatbridge/config.option.ignoreList": "Liste d'ignoré(e)s",
+  "text.config.twitchchatbridge/config.option.ignoreList.tooltip": "Les messages des utilisateurs de cette liste ne seront pas affichés",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions": "Suggestions pour /twitch watch",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions.tooltip": "Autocompléter /twitch watch channel names avec les noms des utilisateurs de votre serveur",
+  "text.config.twitchchatbridge/config.section.credentials": "Identifiants",
+  "text.config.twitchchatbridge/config.category.credentials": "Token d'OAuth",
+  "text.config.twitchchatbridge/config.category.credentials.tooltip": "Votre token d'OAuth Twitch",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey": "Token d'OAuth",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey.tooltip": "Votre token d'OAuth Twitch",
 
   "text.twitchchat.command.base.noargs1": "Bienvenue sur le mod Minecraft-Twitch Bridge !",
   "text.twitchchat.command.base.noargs2": "Pour l'activer, faites simplement /twitch enable après l'avoir paramétré.",
