--- a/src/main/resources/assets/twitchchat/lang/ru_ru.json
+++ b/src/main/resources/assets/twitchchat/lang/ru_ru.json
@@ -1,25 +1,22 @@
 {
-  "config.twitchchat.title": "Twitch Chat Bridge",
-  "config.twitchchat.category.credentials": "Данные для входа",
-  "config.twitchchat.credentials.channel": "Twitch канал",
-  "config.twitchchat.credentials.username": "Имя пользователя",
-  "config.twitchchat.credentials.username.tooltip": "Ваше Twitch имя пользователя",
-  "config.twitchchat.credentials.oauthKey": "OAuth Токен",
-  "config.twitchchat.credentials.oauthKey.tooltip": "Ваш Twitch OAuth токен",
-  "config.twitchchat.category.cosmetics": "Внешний вид",
-  "config.twitchchat.cosmetics.prefix": "Префикс",
-  "config.twitchchat.cosmetics.prefix.tooltip": "Поставит этот перед вашими сообщениями чтобы отправить их на Twitch канал",
-  "config.twitchchat.cosmetics.dateFormat": "Формат даты и времени",
-  "config.twitchchat.cosmetics.dateFormat.tooltip": "Изменить формат даты и времени для сообщений",
-  "config.twitchchat.cosmetics.ignorelist": "Черный список",
-  "config.twitchchat.cosmetics.ignorelist.tooltip": "Сообщения от пользователей ниже не будут отображены",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions": "Автозаполнение для /twitch watch",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions.tooltip": "Автозаполнение имен игроков с вашего сервера для /twitch watch ",
-  "config.twitchchat.category.broadcast": "Трансляция",
-  "config.twitchchat.broadcast.toggle": "Транслировать Twitch сообщения",
-  "config.twitchchat.broadcast.toggle.tooltip": "Отправляет сообщения из Twitch чата в чат сервера",
-  "config.twitchchat.broadcast.prefix": "Префикс отправки",
-  "config.twitchchat.broadcast.prefix.tooltip": "Данный префикс будет стоять перед Twitch сообщениями в чате сервера",
+  "text.config.twitchchatbridge/config.title": "Twitch Chat Bridge",
+  "text.config.twitchchatbridge/config.option.channel": "Twitch канал",
+  "text.config.twitchchatbridge/config.option.broadcast": "Транслировать Twitch сообщения",
+  "text.config.twitchchatbridge/config.option.broadcast.tooltip": "Отправляет сообщения из Twitch чата в чат сервера",
+  "text.config.twitchchatbridge/config.section.cosmetics": "Внешний вид",
+  "text.config.twitchchatbridge/config.option.prefix": "Префикс отправки",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "Данный префикс будет стоять перед Twitch сообщениями в чате сервера",
+  "text.config.twitchchatbridge/config.option.dateFormat": "Формат даты и времени",
+  "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "Изменить формат даты и времени для сообщений",
+  "text.config.twitchchatbridge/config.option.ignoreList": "Черный список",
+  "text.config.twitchchatbridge/config.option.ignoreList.tooltip": "Сообщения от пользователей ниже не будут отображены",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions": "Автозаполнение для /twitch watch",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions.tooltip": "Автозаполнение имен игроков с вашего сервера для /twitch watch ",
+  "text.config.twitchchatbridge/config.section.credentials": "Данные для входа",
+  "text.config.twitchchatbridge/config.category.credentials": "OAuth Токен",
+  "text.config.twitchchatbridge/config.category.credentials.tooltip": "Ваш Twitch OAuth токен",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey": "OAuth Токен",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey.tooltip": "Ваш Twitch OAuth токен",
 
   "text.twitchchat.command.base.noargs1": "Добро пожаловать в Minecraft-Twitch Bridge мод!",
   "text.twitchchat.command.base.noargs2": "Чтобы включить его просто используйте /twitch enable, когда вы завершите настраивать конфигурацию.",
