--- a/src/main/resources/assets/twitchchat/lang/zh_cn.json
+++ b/src/main/resources/assets/twitchchat/lang/zh_cn.json
@@ -1,25 +1,22 @@
 {
-  "config.twitchchat.title": "Twitch聊天桥接",
-  "config.twitchchat.category.credentials": "凭证",
-  "config.twitchchat.credentials.channel": "Twitch频道",
-  "config.twitchchat.credentials.username": "用户名",
-  "config.twitchchat.credentials.username.tooltip": "你的Twitch用户名",
-  "config.twitchchat.credentials.oauthKey": "OAuth令牌",
-  "config.twitchchat.credentials.oauthKey.tooltip": "你的Twitch OAuth令牌",
-  "config.twitchchat.category.cosmetics": "装饰",
-  "config.twitchchat.cosmetics.prefix": "前缀",
-  "config.twitchchat.cosmetics.prefix.tooltip": "在发送至Twitch频道的消息开头添加前缀",
-  "config.twitchchat.cosmetics.dateFormat": "时间戳格式",
-  "config.twitchchat.cosmetics.dateFormat.tooltip": "对在聊天前显示的时间戳格式进行自定义",
-  "config.twitchchat.cosmetics.ignorelist": "忽略列表",
-  "config.twitchchat.cosmetics.ignorelist.tooltip": "列表中的用户名对应的用户所发送的聊天将不会显示",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions": "/twitch watch输入建议",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions.tooltip": "自动以服务器中用户的用户名补全/twitch watch命令",
-  "config.twitchchat.category.broadcast": "广播",
-  "config.twitchchat.broadcast.toggle": "广播Twitch消息",
-  "config.twitchchat.broadcast.toggle.tooltip": "将Twitch聊天消息发送至服务器聊天栏",
-  "config.twitchchat.broadcast.prefix": "广播消息前缀",
-  "config.twitchchat.broadcast.prefix.tooltip": "在广播至服务器的消息开头添加前缀",
+  "text.config.twitchchatbridge/config.title": "Twitch聊天桥接",
+  "text.config.twitchchatbridge/config.option.channel": "Twitch频道",
+  "text.config.twitchchatbridge/config.option.broadcast": "广播Twitch消息",
+  "text.config.twitchchatbridge/config.option.broadcast.tooltip": "将Twitch聊天消息发送至服务器聊天栏",
+  "text.config.twitchchatbridge/config.section.cosmetics": "装饰",
+  "text.config.twitchchatbridge/config.option.prefix": "广播消息前缀",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "在广播至服务器的消息开头添加前缀",
+  "text.config.twitchchatbridge/config.option.dateFormat": "时间戳格式",
+  "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "对在聊天前显示的时间戳格式进行自定义",
+  "text.config.twitchchatbridge/config.option.ignoreList": "忽略列表",
+  "text.config.twitchchatbridge/config.option.ignoreList.tooltip": "列表中的用户名对应的用户所发送的聊天将不会显示",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions": "/twitch watch输入建议",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions.tooltip": "自动以服务器中用户的用户名补全/twitch watch命令",
+  "text.config.twitchchatbridge/config.section.credentials": "凭证",
+  "text.config.twitchchatbridge/config.category.credentials": "OAuth令牌",
+  "text.config.twitchchatbridge/config.category.credentials.tooltip": "你的Twitch OAuth令牌",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey": "OAuth令牌",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey.tooltip": "你的Twitch OAuth令牌",
 
   "text.twitchchat.command.base.noargs1": "欢迎使用Minecraft-Twitch桥接模组！",
   "text.twitchchat.command.base.noargs2": "设定好配置项后，执行/twitch enable命令即可启用模组功能。",
