--- a/src/main/resources/assets/twitchchat/lang/en_ud.json
+++ b/src/main/resources/assets/twitchchat/lang/en_ud.json
@@ -1,25 +1,25 @@
 {
-  "config.twitchchat.broadcast.prefix": "x\u1d09\u025f\u01dd\u0279d \u01dd\u1d77\u0250ss\u01dd\u026f \u0287s\u0250\u0254p\u0250o\u0279\u15fa",
-  "config.twitchchat.broadcast.prefix.tooltip": "\u0279\u01dd\u028c\u0279\u01dds \u01dd\u0265\u0287 o\u0287 p\u01dd\u0287s\u0250\u0254p\u0250o\u0279q s\u01dd\u1d77\u0250ss\u01dd\u026f \u025fo \u1d77u\u1d09uu\u1d09\u1d77\u01ddq \u01dd\u0265\u0287 o\u0287 p\u01ddpp\u0250 \u01ddq o\u0287 \u1d77u\u1d09o\u1d77 s\u1d09 s\u1d09\u0265\u27d8",
-  "config.twitchchat.broadcast.toggle": "s\u01dd\u1d77\u0250ss\u01dd\u026f \u0265\u0254\u0287\u1d09\u028d\u27d8 \u0287s\u0250\u0254p\u0250o\u0279\u15fa",
-  "config.twitchchat.broadcast.toggle.tooltip": "\u0287\u0250\u0265\u0254 \u0279\u01dd\u028c\u0279\u01dds \u01dd\u0265\u0287 o\u0287 s\u01dd\u1d77\u0250ss\u01dd\u026f \u0287\u0250\u0265\u0254 \u0265\u0254\u0287\u1d09\u028d\u27d8 spu\u01ddS",
-  "config.twitchchat.category.broadcast": "\u1d77u\u1d09\u0287s\u0250\u0254p\u0250o\u0279\u15fa",
-  "config.twitchchat.category.cosmetics": "s\u0254\u1d09\u0287\u01dd\u026fso\u0186",
-  "config.twitchchat.category.credentials": "s\ua781\u0250\u1d09\u0287u\u01ddp\u01dd\u0279\u0186",
-  "config.twitchchat.cosmetics.dateFormat": "\u0287\u0250\u026f\u0279o\u025f d\u026f\u0250\u0287s\u01dd\u026f\u1d09\u27d8",
-  "config.twitchchat.cosmetics.dateFormat.tooltip": "\u028do\ua781\ua781o\u025f o\u0287 \u1d77u\u1d09o\u1d77 \u01dd\u0279\u0250 s\u01dd\u1d77\u0250ss\u01dd\u026f \u0287\u0250\u026f\u0279o\u025f d\u026f\u0250\u0287s\u01dd\u026f\u1d09\u0287 \u01dd\u0265\u0287 \u01ddz\u1d09\u026fo\u0287sn\u0186",
-  "config.twitchchat.cosmetics.ignorelist": "\u0287s\u1d09\ua781 \u01dd\u0279ou\u1d77I",
-  "config.twitchchat.cosmetics.ignorelist.tooltip": "p\u01dd\u028e\u0250\ua781ds\u1d09p \u01ddq \u0287,uo\u028d \u0287s\u1d09\ua781 s\u1d09\u0265\u0287 u\u1d09 s\u0279\u01ddsn \u026fo\u0279\u025f s\u01dd\u1d77\u0250ss\u01ddW",
-  "config.twitchchat.cosmetics.prefix": "x\u1d09\u025f\u01dd\u0279P",
-  "config.twitchchat.cosmetics.prefix.tooltip": "\ua781\u01dduu\u0250\u0265\u0254 \u0265\u0254\u0287\u1d09\u028d\u27d8 \u0250 o\u0287 \u026f\u01dd\u0265\u0287 pu\u01dds o\u0287 s\u01dd\u1d77\u0250ss\u01dd\u026f \u0279no\u028e \u025fo \u0287\u0279\u0250\u0287s \u01dd\u0265\u0287 \u0287\u0250 s\u1d09\u0265\u0287 \u0287nP",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions": "\u0265\u0254\u0287\u0250\u028d \u0265\u0254\u0287\u1d09\u028d\u0287/ \u0279o\u025f suo\u1d09\u0287s\u01dd\u1d77\u1d77nS",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions.tooltip": "\u0279\u01dd\u028c\u0279\u01dds \u0279no\u028e u\u1d09 s\u0279\u01ddsn \u026fo\u0279\u025f s\u01dd\u026f\u0250u \u0265\u0287\u1d09\u028d s\u01dd\u026f\u0250u \ua781\u01dduu\u0250\u0265\u0254 \u0265\u0254\u0287\u0250\u028d \u0265\u0254\u0287\u1d09\u028d\u0287/ \u01dd\u0287\u01dd\ua781d\u026fo\u0254o\u0287n\u2c6f",
-  "config.twitchchat.credentials.channel": "\ua781\u01dduu\u0250\u0265\u0254 \u0265\u0254\u0287\u1d09\u028d\u27d8",
-  "config.twitchchat.credentials.oauthKey": "u\u01dd\u029eo\u27d8 \u0265\u0287n\u2c6fO",
-  "config.twitchchat.credentials.oauthKey.tooltip": "u\u01dd\u029eo\u0287 \u0265\u0287n\u2c6fO \u0265\u0254\u0287\u1d09\u028d\u27d8 \u0279no\u2144",
-  "config.twitchchat.credentials.username": "\u01dd\u026f\u0250u\u0279\u01dds\u2229",
-  "config.twitchchat.credentials.username.tooltip": "\u01dd\u026f\u0250u\u0279\u01ddsn \u0265\u0254\u0287\u1d09\u028d\u27d8 \u0279no\u2144",
-  "config.twitchchat.title": "\u01dd\u1d77p\u1d09\u0279\u15fa \u0287\u0250\u0265\u0186 \u0265\u0254\u0287\u1d09\u028d\u27d8",
+  "text.config.twitchchatbridge/config.category.credentials": "u\u01dd\u029eo\u27d8 \u0265\u0287n\u2c6fO",
+  "text.config.twitchchatbridge/config.category.credentials.tooltip": "u\u01dd\u029eo\u0287 \u0265\u0287n\u2c6fO \u0265\u0254\u0287\u1d09\u028d\u27d8 \u0279no\u2144",
+  "text.config.twitchchatbridge/config.option.broadcast": "s\u01dd\u1d77\u0250ss\u01dd\u026f \u0265\u0254\u0287\u1d09\u028d\u27d8 \u0287s\u0250\u0254p\u0250o\u0279\u15fa",
+  "text.config.twitchchatbridge/config.option.broadcast.tooltip": "\u0287\u0250\u0265\u0254 \u0279\u01dd\u028c\u0279\u01dds \u01dd\u0265\u0287 o\u0287 s\u01dd\u1d77\u0250ss\u01dd\u026f \u0287\u0250\u0265\u0254 \u0265\u0254\u0287\u1d09\u028d\u27d8 spu\u01ddS",
+  "text.config.twitchchatbridge/config.option.channel": "\ua781\u01dduu\u0250\u0265\u0254 \u0265\u0254\u0287\u1d09\u028d\u27d8",
+  "text.config.twitchchatbridge/config.option.command": "\u01dd\u026f\u0250u pu\u0250\u026f\u026fo\u0186",
+  "text.config.twitchchatbridge/config.option.command.tooltip": "po\u026f \u01dd\u0265\u0287 \u0265\u0287\u1d09\u028d \u0287\u0254\u0250\u0279\u01dd\u0287u\u1d09 o\u0287 p\u01ddsn \u01ddq \ua781\ua781\u1d09\u028d \u0287\u0250\u0265\u0287 pu\u0250\u026f\u026fo\u0254 \u01dd\u0265\u0287 \u025fo \u01dd\u026f\u0250u \u01dd\u0265\u27d8",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey": "u\u01dd\u029eo\u27d8 \u0265\u0287n\u2c6fO",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey.tooltip": "u\u01dd\u029eo\u0287 \u0265\u0287n\u2c6fO \u0265\u0254\u0287\u1d09\u028d\u27d8 \u0279no\u2144",
+  "text.config.twitchchatbridge/config.option.dateFormat": "\u0287\u0250\u026f\u0279o\u025f d\u026f\u0250\u0287s\u01dd\u026f\u1d09\u27d8",
+  "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "\u028do\ua781\ua781o\u025f o\u0287 \u1d77u\u1d09o\u1d77 \u01dd\u0279\u0250 s\u01dd\u1d77\u0250ss\u01dd\u026f \u0287\u0250\u026f\u0279o\u025f d\u026f\u0250\u0287s\u01dd\u026f\u1d09\u0287 \u01dd\u0265\u0287 \u01ddz\u1d09\u026fo\u0287sn\u0186",
+  "text.config.twitchchatbridge/config.option.ignoreList": "\u0287s\u1d09\ua781 \u01dd\u0279ou\u1d77I",
+  "text.config.twitchchatbridge/config.option.ignoreList.tooltip": "p\u01dd\u028e\u0250\ua781ds\u1d09p \u01ddq \u0287,uo\u028d \u0287s\u1d09\ua781 s\u1d09\u0265\u0287 u\u1d09 s\u0279\u01ddsn \u026fo\u0279\u025f s\u01dd\u1d77\u0250ss\u01ddW",
+  "text.config.twitchchatbridge/config.option.prefix": "x\u1d09\u025f\u01dd\u0279d \u01dd\u1d77\u0250ss\u01dd\u026f \u0287s\u0250\u0254p\u0250o\u0279\u15fa",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "\u0279\u01dd\u028c\u0279\u01dds \u01dd\u0265\u0287 o\u0287 p\u01dd\u0287s\u0250\u0254p\u0250o\u0279q s\u01dd\u1d77\u0250ss\u01dd\u026f \u025fo \u1d77u\u1d09uu\u1d09\u1d77\u01ddq \u01dd\u0265\u0287 o\u0287 p\u01ddpp\u0250 \u01ddq o\u0287 \u1d77u\u1d09o\u1d77 s\u1d09 s\u1d09\u0265\u27d8",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions": "\u0265\u0254\u0287\u0250\u028d \u0265\u0254\u0287\u1d09\u028d\u0287/ \u0279o\u025f suo\u1d09\u0287s\u01dd\u1d77\u1d77nS",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions.tooltip": "\u0279\u01dd\u028c\u0279\u01dds \u0279no\u028e u\u1d09 s\u0279\u01ddsn \u026fo\u0279\u025f s\u01dd\u026f\u0250u \u0265\u0287\u1d09\u028d s\u01dd\u026f\u0250u \ua781\u01dduu\u0250\u0265\u0254 \u0265\u0254\u0287\u0250\u028d \u0265\u0254\u0287\u1d09\u028d\u0287/ \u01dd\u0287\u01dd\ua781d\u026fo\u0254o\u0287n\u2c6f",
+  "text.config.twitchchatbridge/config.section.cosmetics": "s\u0254\u1d09\u0287\u01dd\u026fso\u0186",
+  "text.config.twitchchatbridge/config.section.credentials": "s\ua781\u0250\u1d09\u0287u\u01ddp\u01dd\u0279\u0186",
+  "text.config.twitchchatbridge/config.title": "\u01dd\u1d77p\u1d09\u0279\u15fa \u0287\u0250\u0265\u0186 \u0265\u0254\u0287\u1d09\u028d\u27d8",
+  "text.config.twitchchatbridge/config.title.tooltip": "\u00a1\u1d77\u1d09\u025fuo\u0254 \u0279no\u028e dn \u0287\u01dds o\u1d77 pu\u0250 \u01dd\u026f \u1d77u\u1d09\u0279\u01dd\u028co\u0265 do\u0287s \u028doN \u00a1\u0265np 'p\u01dd\ua781\ua781\u0250\u0254 s\u1d09 po\u026f \u01dd\u0265\u0287 \u028do\u0265 s,\u0287\u0250\u0265\u27d8",
   "text.twitchchat.bot.connected": ",%s, \ua781\u01dduu\u0250\u0265\u0254 o\u0287 p\u01dd\u0287\u0254\u01dduuo\u0186",
   "text.twitchchat.bot.kicked": ",%s, :\u01ddsn\u0250\u0254\u01ddq \ua781\u01dduu\u0250\u0265\u0254 \u0287u\u01dd\u0279\u0279n\u0254 \u01dd\u0265\u0287 \u026fo\u0279\u025f p\u01dd\u029e\u0254\u1d09\u029e",
   "text.twitchchat.chat.integration_disabled": "\u02d9\u01dd\ua781q\u0250u\u01dd \u0265\u0254\u0287\u1d09\u028d\u0287/ op \u0287\u1d09 \u01dd\ua781q\u0250u\u01dd o\u0287 'p\u01dd\ua781q\u0250u\u01dd \u0287ou s\u1d09 uo\u1d09\u0287\u0250\u0279\u1d77\u01dd\u0287u\u1d09 \u0265\u0254\u0287\u1d09\u028d\u27d8",
