--- a/src/main/resources/assets/twitchchat/lang/es_es.json
+++ b/src/main/resources/assets/twitchchat/lang/es_es.json
@@ -1,25 +1,22 @@
 {
-  "config.twitchchat.title": "Puente de chat de Twitch",
-  "config.twitchchat.category.credentials": "Credenciales",
-  "config.twitchchat.credentials.channel": "Canal de Twitch",
-  "config.twitchchat.credentials.username": "Nombre de usuario",
-  "config.twitchchat.credentials.username.tooltip": "Tu nombre de usuario de Twitch",
-  "config.twitchchat.credentials.oauthKey": "Token OAuth",
-  "config.twitchchat.credentials.oauthKey.tooltip": "Tu token OAuth de Twitch",
-  "config.twitchchat.category.cosmetics": "Configuraciones cosméticas",
-  "config.twitchchat.cosmetics.prefix": "Prefijo",
-  "config.twitchchat.cosmetics.prefix.tooltip": "Pon esto al comienzo de tus mensajes para enviarlos a un canal de Twitch",
-  "config.twitchchat.cosmetics.dateFormat": "Formato de marca de tiempo",
-  "config.twitchchat.cosmetics.dateFormat.tooltip": "Personaliza el formato de la marca de tiempo que van a seguir los mensajes",
-  "config.twitchchat.cosmetics.ignorelist": "Lista de ignorados",
-  "config.twitchchat.cosmetics.ignorelist.tooltip": "Los mensajes de usuarios en esta lista no serán mostrados",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions": "Sugerencias para /twitch watch",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions.tooltip": "Autocompletar los nombres de canales de /twitch watch con usuarios en tu servidor",
-  "config.twitchchat.category.broadcast": "Retransmisión",
-  "config.twitchchat.broadcast.toggle": "Retransmitir mensajes de Twitch",
-  "config.twitchchat.broadcast.toggle.tooltip": "Retransmite los mensajes de chat de Twitch al chat del servidor",
-  "config.twitchchat.broadcast.prefix": "Prefijo de los mensajes retransmitidos",
-  "config.twitchchat.broadcast.prefix.tooltip": "Esto se va a añadir al principio de los mensajes que se retransmiten al servidor",
+  "text.config.twitchchatbridge/config.title": "Puente de chat de Twitch",
+  "text.config.twitchchatbridge/config.option.channel": "Canal de Twitch",
+  "text.config.twitchchatbridge/config.option.broadcast": "Retransmitir mensajes de Twitch",
+  "text.config.twitchchatbridge/config.option.broadcast.tooltip": "Retransmite los mensajes de chat de Twitch al chat del servidor",
+  "text.config.twitchchatbridge/config.section.cosmetics": "Configuraciones cosméticas",
+  "text.config.twitchchatbridge/config.option.prefix": "Prefijo de los mensajes retransmitidos",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "Esto se va a añadir al principio de los mensajes que se retransmiten al servidor",
+  "text.config.twitchchatbridge/config.option.dateFormat": "Formato de marca de tiempo",
+  "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "Personaliza el formato de la marca de tiempo que van a seguir los mensajes",
+  "text.config.twitchchatbridge/config.option.ignoreList": "Lista de ignorados",
+  "text.config.twitchchatbridge/config.option.ignoreList.tooltip": "Los mensajes de usuarios en esta lista no serán mostrados",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions": "Sugerencias para /twitch watch",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions.tooltip": "Autocompletar los nombres de canales de /twitch watch con usuarios en tu servidor",
+  "text.config.twitchchatbridge/config.section.credentials": "Credenciales",
+  "text.config.twitchchatbridge/config.category.credentials": "Token OAuth",
+  "text.config.twitchchatbridge/config.category.credentials.tooltip": "Tu token OAuth de Twitch",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey": "Token OAuth",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey.tooltip": "Tu token OAuth de Twitch",
 
   "text.twitchchat.command.base.noargs1": "¡Bienvenido al mod de puente de chat entre Minecraft y Twitch!",
   "text.twitchchat.command.base.noargs2": "Para inicializarlo simplemente escribe /twitch enable cuando hayas terminado de configurar los ajustes.",
