--- a/src/main/resources/assets/twitchchat/lang/ko_kr.json
+++ b/src/main/resources/assets/twitchchat/lang/ko_kr.json
@@ -1,25 +1,22 @@
 {
-  "config.twitchchat.title": "Twitch Chat Bridge",
-  "config.twitchchat.category.credentials": "계정 인증",
-  "config.twitchchat.credentials.channel": "트위치 채널",
-  "config.twitchchat.credentials.username": "아이디",
-  "config.twitchchat.credentials.username.tooltip": "사용자 트위치 아이디",
-  "config.twitchchat.credentials.oauthKey": "인증 토큰",
-  "config.twitchchat.credentials.oauthKey.tooltip": "사용자 트위치 인증 토큰",
-  "config.twitchchat.category.cosmetics": "Cosmetics",
-  "config.twitchchat.cosmetics.prefix": "접두사",
-  "config.twitchchat.cosmetics.prefix.tooltip": "트위치 채널 채팅창에서 입력되는 메시지가 전송될 때 앞에 붙을 접두사입니다.",
-  "config.twitchchat.cosmetics.dateFormat": "타임스탬프 형식",
-  "config.twitchchat.cosmetics.dateFormat.tooltip": "출력되는 메시지에 적용할 타임스탬프 형식을 커스터마이즈합니다.",
-  "config.twitchchat.cosmetics.ignorelist": "무시 목록",
-  "config.twitchchat.cosmetics.ignorelist.tooltip": "이 목록에 있는 사용자의 메시지는 표시하지 않습니다.",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions": "/twitch watch 이름 제안",
-  "config.twitchchat.cosmetics.twitchWatchSuggestions.tooltip": "서버에 있는 사용자의 이름을 사용하여 /twitch watch 채널 이름을 자동 완성합니다.",
-  "config.twitchchat.category.broadcast": "방송",
-  "config.twitchchat.broadcast.toggle": "트위치 방송 메시지",
-  "config.twitchchat.broadcast.toggle.tooltip": "서버 채팅에 트위치 채팅 메시지를 전송합니다.",
-  "config.twitchchat.broadcast.prefix": "방송 메시지 접두사",
-  "config.twitchchat.broadcast.prefix.tooltip": "서버로 전송되는 메시지 시작 부분에 추가됩니다.",
+  "text.config.twitchchatbridge/config.title": "Twitch Chat Bridge",
+  "text.config.twitchchatbridge/config.option.channel": "트위치 채널",
+  "text.config.twitchchatbridge/config.option.broadcast": "트위치 방송 메시지",
+  "text.config.twitchchatbridge/config.option.broadcast.tooltip": "서버 채팅에 트위치 채팅 메시지를 전송합니다.",
+  "text.config.twitchchatbridge/config.section.cosmetics": "Cosmetics",
+  "text.config.twitchchatbridge/config.option.prefix": "방송 메시지 접두사",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "서버로 전송되는 메시지 시작 부분에 추가됩니다.",
+  "text.config.twitchchatbridge/config.option.dateFormat": "타임스탬프 형식",
+  "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "출력되는 메시지에 적용할 타임스탬프 형식을 커스터마이즈합니다.",
+  "text.config.twitchchatbridge/config.option.ignoreList": "무시 목록",
+  "text.config.twitchchatbridge/config.option.ignoreList.tooltip": "이 목록에 있는 사용자의 메시지는 표시하지 않습니다.",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions": "/twitch watch 이름 제안",
+  "text.config.twitchchatbridge/config.option.twitchWatchSuggestions.tooltip": "서버에 있는 사용자의 이름을 사용하여 /twitch watch 채널 이름을 자동 완성합니다.",
+  "text.config.twitchchatbridge/config.section.credentials": "계정 인증",
+  "text.config.twitchchatbridge/config.category.credentials": "인증 토큰",
+  "text.config.twitchchatbridge/config.category.credentials.tooltip": "사용자 트위치 인증 토큰",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey": "인증 토큰",
+  "text.config.twitchchatbridge/config.option.credentials.oauthKey.tooltip": "사용자 트위치 인증 토큰",
 
   "text.twitchchat.command.base.noargs1": "Minecraft-Twitch Bridge 모드 사용을 환영합니다!",
   "text.twitchchat.command.base.noargs2": "환경설정을 모두 끝냈다면 /twitch enable 명령어를 통해 모드를 활성화하세요.",
