--- a/src/main/resources/assets/twitchchat/lang/en_ud.json
+++ b/src/main/resources/assets/twitchchat/lang/en_ud.json
@@ -1,6 +1,8 @@
 {
   "text.config.twitchchatbridge/config.category.credentials": "u\u01dd\u029eo\u27d8 \u0265\u0287n\u2c6fO",
   "text.config.twitchchatbridge/config.category.credentials.tooltip": "u\u01dd\u029eo\u0287 \u0265\u0287n\u2c6fO \u0265\u0254\u0287\u1d09\u028d\u27d8 \u0279no\u2144",
+  "text.config.twitchchatbridge/config.option.avatarBadge": "\u01dd\u1d77p\u0250q \u0279\u0250\u0287\u0250\u028c\u0250 \ua781\u01dduu\u0250\u0265\u0254 \u028do\u0265s s\u028e\u0250\u028d\ua781\u2c6f",
+  "text.config.twitchchatbridge/config.option.avatarBadge.tooltip": "\u02d9\u01ddpo\u026f \u0287\u0250\u0265\u0254-p\u01dd\u0279\u0250\u0265s u\u1d09 s\u1d09 \ua781\u01dduu\u0250\u0265\u0254 \u01dd\u0265\u0287 u\u01dd\u0265\u028d u\u028do\u0265s \u028e\ua781uo s\u0287\u1d09 'p\u01dd\ua781q\u0250s\u1d09p u\u01dd\u0265M \u02d9u\u1d09 p\u01dd\u0287sod s\u0250\u028d \u01dd\u1d77\u0250ss\u01dd\u026f \u01dd\u0265\u0287 \ua781\u01dduu\u0250\u0265\u0254 \u01dd\u0265\u0287 \u025fo \u0279\u0250\u0287\u0250\u028c\u0250 \u0279\u01ddsn \u01dd\u0265\u0287 s\u028do\u0265s s\u028e\u0250\u028d\ua781\u2c6f",
   "text.config.twitchchatbridge/config.option.broadcast": "s\u01dd\u1d77\u0250ss\u01dd\u026f \u0265\u0254\u0287\u1d09\u028d\u27d8 \u0287s\u0250\u0254p\u0250o\u0279\u15fa",
   "text.config.twitchchatbridge/config.option.broadcast.tooltip": "\u0287\u0250\u0265\u0254 \u0279\u01dd\u028c\u0279\u01dds \u01dd\u0265\u0287 o\u0287 s\u01dd\u1d77\u0250ss\u01dd\u026f \u0287\u0250\u0265\u0254 \u0265\u0254\u0287\u1d09\u028d\u27d8 spu\u01ddS",
   "text.config.twitchchatbridge/config.option.channel": "\ua781\u01dduu\u0250\u0265\u0254 \u0265\u0254\u0287\u1d09\u028d\u27d8",
