fix(config): prefix config was merged with broadcast prefix
was introduced in refactor of config in commie ca7ed1d57b5e1324120b04419bbda74e7dff9833

--- a/src/main/resources/assets/twitchchat/lang/en_gb.json
+++ b/src/main/resources/assets/twitchchat/lang/en_gb.json
@@ -1,11 +1,13 @@
 {
   "text.config.twitchchatbridge/config.title": "Twitch Chat Bridge",
   "text.config.twitchchatbridge/config.option.channel": "Twitch channel",
+  "text.config.twitchchatbridge/config.option.prefix": "Prefix",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "Put this at the start of your messages to send them to a Twitch channel",
   "text.config.twitchchatbridge/config.option.broadcast": "Broadcast Twitch messages",
   "text.config.twitchchatbridge/config.option.broadcast.tooltip": "Sends Twitch chat messages to the server chat",
   "text.config.twitchchatbridge/config.section.cosmetics": "Cosmetics",
-  "text.config.twitchchatbridge/config.option.prefix": "Broadcast message prefix",
-  "text.config.twitchchatbridge/config.option.prefix.tooltip": "This is going to be added to the beginning of messages broadcasted to the server",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix": "Broadcast message prefix",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix.tooltip": "This is going to be added to the beginning of messages broadcasted to the server",
   "text.config.twitchchatbridge/config.option.dateFormat": "Timestamp format",
   "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "Customise the timestamp format messages are going to follow",
   "text.config.twitchchatbridge/config.option.ignoreList": "Ignore list",
