--- a/src/main/resources/assets/twitchchat/lang/es_es.json
+++ b/src/main/resources/assets/twitchchat/lang/es_es.json
@@ -1,11 +1,13 @@
 {
   "text.config.twitchchatbridge/config.title": "Puente de chat de Twitch",
   "text.config.twitchchatbridge/config.option.channel": "Canal de Twitch",
+  "text.config.twitchchatbridge/config.option.prefix": "Prefijo",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "Pon esto al comienzo de tus mensajes para enviarlos a un canal de Twitch",
   "text.config.twitchchatbridge/config.option.broadcast": "Retransmitir mensajes de Twitch",
   "text.config.twitchchatbridge/config.option.broadcast.tooltip": "Retransmite los mensajes de chat de Twitch al chat del servidor",
   "text.config.twitchchatbridge/config.section.cosmetics": "Configuraciones cosméticas",
-  "text.config.twitchchatbridge/config.option.prefix": "Prefijo de los mensajes retransmitidos",
-  "text.config.twitchchatbridge/config.option.prefix.tooltip": "Esto se va a añadir al principio de los mensajes que se retransmiten al servidor",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix": "Prefijo de los mensajes retransmitidos",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix.tooltip": "Esto se va a añadir al principio de los mensajes que se retransmiten al servidor",
   "text.config.twitchchatbridge/config.option.dateFormat": "Formato de marca de tiempo",
   "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "Personaliza el formato de la marca de tiempo que van a seguir los mensajes",
   "text.config.twitchchatbridge/config.option.ignoreList": "Lista de ignorados",
