--- a/src/main/resources/assets/twitchchat/lang/fr_fr.json
+++ b/src/main/resources/assets/twitchchat/lang/fr_fr.json
@@ -1,11 +1,13 @@
 {
   "text.config.twitchchatbridge/config.title": "Twitch Chat Bridge",
   "text.config.twitchchatbridge/config.option.channel": "Chaîne Twitch",
+  "text.config.twitchchatbridge/config.option.prefix": "Préfixe",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "Mettez cela au début de vos messages pour les envoyer à une chaîne Twitch",
   "text.config.twitchchatbridge/config.option.broadcast": "Diffuser les messages Twitch",
   "text.config.twitchchatbridge/config.option.broadcast.tooltip": "Envoie les messages du tchat Twitch sur le tchat du serveur",
   "text.config.twitchchatbridge/config.section.cosmetics": "Cosmétiques",
-  "text.config.twitchchatbridge/config.option.prefix": "Préfixe de message de diffusion",
-  "text.config.twitchchatbridge/config.option.prefix.tooltip": "Cela sera ajouté au début des messages diffusés au serveur",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix": "Préfixe de message de diffusion",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix.tooltip": "Cela sera ajouté au début des messages diffusés au serveur",
   "text.config.twitchchatbridge/config.option.dateFormat": "Format de l'horodatage",
   "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "Modifier le format de l'horodatage que les messages vont suivre",
   "text.config.twitchchatbridge/config.option.ignoreList": "Liste d'ignoré(e)s",
