--- a/src/main/resources/assets/twitchchat/lang/ko_kr.json
+++ b/src/main/resources/assets/twitchchat/lang/ko_kr.json
@@ -1,11 +1,13 @@
 {
   "text.config.twitchchatbridge/config.title": "Twitch Chat Bridge",
   "text.config.twitchchatbridge/config.option.channel": "트위치 채널",
+  "text.config.twitchchatbridge/config.option.prefix": "접두사",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "트위치 채널 채팅창에서 입력되는 메시지가 전송될 때 앞에 붙을 접두사입니다.",
   "text.config.twitchchatbridge/config.option.broadcast": "트위치 방송 메시지",
   "text.config.twitchchatbridge/config.option.broadcast.tooltip": "서버 채팅에 트위치 채팅 메시지를 전송합니다.",
   "text.config.twitchchatbridge/config.section.cosmetics": "Cosmetics",
-  "text.config.twitchchatbridge/config.option.prefix": "방송 메시지 접두사",
-  "text.config.twitchchatbridge/config.option.prefix.tooltip": "서버로 전송되는 메시지 시작 부분에 추가됩니다.",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix": "방송 메시지 접두사",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix.tooltip": "서버로 전송되는 메시지 시작 부분에 추가됩니다.",
   "text.config.twitchchatbridge/config.option.dateFormat": "타임스탬프 형식",
   "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "출력되는 메시지에 적용할 타임스탬프 형식을 커스터마이즈합니다.",
   "text.config.twitchchatbridge/config.option.ignoreList": "무시 목록",
