--- a/src/main/resources/assets/twitchchat/lang/ru_ru.json
+++ b/src/main/resources/assets/twitchchat/lang/ru_ru.json
@@ -1,11 +1,13 @@
 {
   "text.config.twitchchatbridge/config.title": "Twitch Chat Bridge",
   "text.config.twitchchatbridge/config.option.channel": "Twitch канал",
+  "text.config.twitchchatbridge/config.option.prefix": "Префикс",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "Поставит этот перед вашими сообщениями чтобы отправить их на Twitch канал",
   "text.config.twitchchatbridge/config.option.broadcast": "Транслировать Twitch сообщения",
   "text.config.twitchchatbridge/config.option.broadcast.tooltip": "Отправляет сообщения из Twitch чата в чат сервера",
   "text.config.twitchchatbridge/config.section.cosmetics": "Внешний вид",
-  "text.config.twitchchatbridge/config.option.prefix": "Префикс отправки",
-  "text.config.twitchchatbridge/config.option.prefix.tooltip": "Данный префикс будет стоять перед Twitch сообщениями в чате сервера",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix": "Префикс отправки",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix.tooltip": "Данный префикс будет стоять перед Twitch сообщениями в чате сервера",
   "text.config.twitchchatbridge/config.option.dateFormat": "Формат даты и времени",
   "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "Изменить формат даты и времени для сообщений",
   "text.config.twitchchatbridge/config.option.ignoreList": "Черный список",
