--- a/src/main/resources/assets/twitchchat/lang/zh_cn.json
+++ b/src/main/resources/assets/twitchchat/lang/zh_cn.json
@@ -1,11 +1,13 @@
 {
   "text.config.twitchchatbridge/config.title": "Twitch聊天桥接",
   "text.config.twitchchatbridge/config.option.channel": "Twitch频道",
+  "text.config.twitchchatbridge/config.option.prefix": "前缀",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "在发送至Twitch频道的消息开头添加前缀",
   "text.config.twitchchatbridge/config.option.broadcast": "广播Twitch消息",
   "text.config.twitchchatbridge/config.option.broadcast.tooltip": "将Twitch聊天消息发送至服务器聊天栏",
   "text.config.twitchchatbridge/config.section.cosmetics": "装饰",
-  "text.config.twitchchatbridge/config.option.prefix": "广播消息前缀",
-  "text.config.twitchchatbridge/config.option.prefix.tooltip": "在广播至服务器的消息开头添加前缀",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix": "广播消息前缀",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix.tooltip": "在广播至服务器的消息开头添加前缀",
   "text.config.twitchchatbridge/config.option.dateFormat": "时间戳格式",
   "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "对在聊天前显示的时间戳格式进行自定义",
   "text.config.twitchchatbridge/config.option.ignoreList": "忽略列表",
