--- a/src/main/resources/assets/twitchchat/lang/en_us.json
+++ b/src/main/resources/assets/twitchchat/lang/en_us.json
@@ -2,13 +2,15 @@
   "text.config.twitchchatbridge/config.title": "Twitch Chat Bridge",
   "text.config.twitchchatbridge/config.title.tooltip": "That's how the mod is called, duh! Now stop hovering me and go set up your config!",
   "text.config.twitchchatbridge/config.option.channel": "Twitch channel",
+  "text.config.twitchchatbridge/config.option.prefix": "Prefix",
+  "text.config.twitchchatbridge/config.option.prefix.tooltip": "Put this at the start of your messages to send them to a Twitch channel",
   "text.config.twitchchatbridge/config.option.broadcast": "Broadcast Twitch messages",
   "text.config.twitchchatbridge/config.option.broadcast.tooltip": "Sends Twitch chat messages to the server chat",
   "text.config.twitchchatbridge/config.option.command": "Command name",
   "text.config.twitchchatbridge/config.option.command.tooltip": "The name of the command that will be used to interact with the mod",
   "text.config.twitchchatbridge/config.section.cosmetics": "Cosmetics",
-  "text.config.twitchchatbridge/config.option.prefix": "Broadcast message prefix",
-  "text.config.twitchchatbridge/config.option.prefix.tooltip": "This is going to be added to the beginning of messages broadcasted to the server",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix": "Broadcast message prefix",
+  "text.config.twitchchatbridge/config.option.broadcastPrefix.tooltip": "This is going to be added to the beginning of messages broadcasted to the server",
   "text.config.twitchchatbridge/config.option.dateFormat": "Timestamp format",
   "text.config.twitchchatbridge/config.option.dateFormat.tooltip": "Customize the timestamp format messages are going to follow",
   "text.config.twitchchatbridge/config.option.ignoreList": "Ignore list",
